--- a/PushnotificationsDemo/Views/Home/Index.cshtml
+++ b/PushnotificationsDemo/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
             <nav class="c-nav-bar__breadcrumb" aria-label="breadcrumbs">
                 <ul class="u-simple-list">
                     <li class="c-nav-bar__index"><a href="https://developer.microsoft.com/en-us/microsoft-edge/testdrive/" class="c-nav-bar__more">Microsoft Edge Demos</a></li>
-                    <li class="c-nav-bar__title"><span class="u-sr-only">Current demo:</span>Push Notifications</li>
+                    <li class="c-nav-bar__title"><span class="u-sr-only">Current demo:</span>Push Notifications with ASP.NET Core</li>
                 </ul>
             </nav>
             <nav class="c-toc">
@@ -53,7 +53,7 @@
                     <div class="l-flex--guide l-subsection wrap">
                         <div class="guide-col-main--alt">
                             <p>It goes without saying that push notifications expand your reach to your users in a timely, power-efficient and dependable way. Users are re-engaged with customized and relevant content that will have them coming back for more.</p>
-                            <p>Inspired by the parallels between basic astrological ideas and push notification architecture, come join us on this journey to better understand how to set up your site – both the front-end and the back-end – to send push messages to a user without needing the browser or app to be opened. You can fork this tutorial itself on <a href="https://github.com/MicrosoftEdge/pushnotifications-demo">GitHub</a> and even set it up locally so that you can play with it.</p>
+                            <p>Inspired by the parallels between basic astrological ideas and push notification architecture, come join us on this journey to better understand how to set up your site – both the front-end and the back-end – to send push messages to a user without needing the browser or app to be opened. You can fork this tutorial itself on <a href="https://github.com/mark-szabo/pushnotifications-demo-aspnetcore">GitHub</a> and even set it up locally so that you can play with it.</p>
                             <p>To see it in action, click the button below, accept the permission prompt (if you haven’t already), and then immediately close this tab (or browser). You should get a notification within 5 seconds after clicking the button below. Don’t worry, when you click the notification, it’ll take you right back here, so you can continue learning about push messages.</p>
                             <button class="btn--action" id="initiate-push" disabled="disabled">Initiating...</button>
                             <p>Just so you know, after clicking the button above, you’ll be getting push message updates daily. If you prefer to stop getting these push messages, click below to unsubcribe.</p>
@@ -148,36 +148,33 @@
             <div class="l-contain">
                 <div class="l-flex--guide l-subsection">
                     <div class="guide-col-main">
-                        <p>To start, you’ll first need to make sure your web server is setup to send pushes. We’ll be using a node.js server and take advantage of the open-source <a href="https://www.npmjs.com/package/web-push">web-push</a> library so that we don’t have to worry about the encryption details involved with sending a push.</p>
-                        <p>We’ll first need to call <code>npm install express</code> (web server) and <code>npm install web-push</code> (web push library) from a terminal or command prompt so that we can use them in our app.</p>
+                        <p>To start, you’ll first need to make sure your web server is setup to send pushes. We’ll be using an ASP.NET Core server and take advantage of the open-source <a href="https://www.nuget.org/packages/WebPush/">WebPush</a> library so that we don’t have to worry about the encryption details involved with sending a push.</p>
+                        <p>We’ll first need to call <code>Install-Package WebPush</code> (web push library) from a terminal or from the Package Manager so that we can use it in our app.</p>
                         <p>We’ll need to specify the VAPID keys that will allow identifications between our app’s server and the notification server (e.g. <a href="https://firebase.google.com/docs/cloud-messaging/">Firebase Cloud Messaging</a> (FCM), <a href="https://blog.mozilla.org/services/">Mozilla Cloud Services</a> (MCS), and <a href="https://docs.microsoft.com/en-us/windows/uwp/design/shell/tiles-and-notifications/windows-push-notification-services--wns--overview">Windows Push Notification Service</a> (WNS) depending on which browser is being used). You only need to set up the VAPID keys once which can be generated easily:</p>
-<pre><code>var webpush = require('web-push');
-console.log(webpush.generateVAPIDKeys());</code></pre>
+<pre><code>using WebPush;
+var vapidKeys = VapidHelper.GenerateVapidKeys();
+</code></pre>
                         <p>Once they’re generated, you can use them for as long as you need to by setting the vapidKeys variable to what you just got when calling <code>generateVAPIDKeys()</code>:</p>
-<pre><code>var vapidPublicKey = 'BL6As_YCGHPf3ZeDbklyVxgvJVb4Tr5qjZFS-J7XzkT5zQNghd9iUBUsqSlVO5znwTsZZrEOx8JFRDJc1JmkymA';
-var vapidPrivateKey = 'GnMVDgbtZrqs7tgKEkJaV5aZF8cVjoq7Ncz_TEVI_lo';
-        
-webpush.setVapidDetails(
-    'mailto:myaccount@outlook.com',
-    vapidPublicKey,
-    vapidPrivateKey
-);
+<pre><code>var vapidSubject = "mailto:myaccount@outlook.com";
+var vapidPublicKey = "BL6As_YCGHPf3ZeDbklyVxgvJVb4Tr5qjZFS-J7XzkT5zQNghd9iUBUsqSlVO5znwTsZZrEOx8JFRDJc1JmkymA";
+var vapidPrivateKey = "GnMVDgbtZrqs7tgKEkJaV5aZF8cVjoq7Ncz_TEVI_lo";
+
+_vapidDetails = new VapidDetails(vapidSubject, vapidPublicKey, vapidPrivateKey);
 </code></pre>
                         <p>We’ll need to set up a few endpoints on our server so that we can provide the public key to our site. The public key will be used when subscribing for push messages so that the notifications server (e.g. WNS or FCM) can know that we are who we say we are when we send subsequent push messages.</p>
-<pre><code>var express = require('express');
-var app = express();
-
-app.get('/api/key', function(req, res) {
-    res.send({
-        key: vapidPublicKey
-    });
-});</code></pre>
+<pre><code>[HttpGet, Route("vapidpublickey")]
+public ActionResult&lt;string&gt; GetVapidPublicKey()
+{
+    return Ok(_pushService.GetVapidPublicKey());
+}</code></pre>
                         <p>We’ll also need an endpoint that will allow us to store the subscription details for a user so that we’ll be able to push messages to them from our app’s server.</p>
-<pre><code>app.post('/api/save-subscription, function(req, res) {
-    // save req.body.subscription to a database
+<pre><code>[HttpPost("subscribe")]
+public async Task&lt;ActionResult&lt;PushSubscription&gt;&gt; Subscribe([FromBody] PushSubscriptionViewModel model)
+{
+    // save subscription to a database
 
-    res.send('Success');
-});</code></pre>
+    return Ok();
+}</code></pre>
                     </div>
                 </div>
                 <div class="l-flex--guide--callout l-subsection">
@@ -192,11 +189,11 @@ app.get('/api/key', function(req, res) {
                     <div class="guide-col-main">
                         <p>You can send pushes whenever you like, such as when something changes in your database, or after something changes on your site or app. For instance, if your site allows users to message each other and someone messages a user, you will want to send a push to that user so that they know they just got a message. Be mindful that the goal is to produce a notification that will have a good chance of being clicked by the user, otherwise it might defeat the purpose. For instance, it might make more sense to not send any push messages to a user that is already on your page since it might annoy them to get notifications when they’re already there. You’ll need to coordinate with the server to ensure that users are only getting notifications when they should be getting them.</p>
                         <p>Using the web push library, we can send a push message from the server.</p>
-<pre><code>webPush.sendNotification(savedSubscriptionData, payload)
-    .then(function (response) {
-        console.log('sent');
-    });
-    </code></pre>
+                        <pre><code>_webPushClient.SendNotification(
+    subscription, 
+    JsonConvert.SerializeObject(notification), 
+    _vapidDetails);
+</code></pre>
                         <p>Now that we have the server all set up, let’s move on to making the actual page that will subscribe for the push!</p>
                     </div>
                 </div>
@@ -209,10 +206,10 @@ app.get('/api/key', function(req, res) {
                     <div class="guide-col-main">
                         <p>When the page loads, the first thing you’ll want to do is get the public key from the application server so that you can set up the push subscription.</p>
 <pre><code>if (navigator.serviceWorker) {
-    fetch('./api/key')
+    fetch('./api/push/vapidpublickey')
         .then(function(res) {
             res.json().then(function(data) {
-                registerPush(data.key);
+                registerPush(data);
             });
         });
 }</code></pre>
@@ -232,7 +229,7 @@ app.get('/api/key', function(req, res) {
                 });
             }) 
             .then(function(subscription) {
-                return fetch('./api/save-subscription', {
+                return fetch('./api/push/subscribe', {
                     method: 'post',
                     headers: { 'Content-type': 'application/json' },
                     body: JSON.stringify({ subscription: subscription })
@@ -298,7 +295,7 @@ function urlBase64ToUint8Array(base64String) {
                         <button class="btn--action" id="initiate-push-2" disabled="disabled">Initiating...</button>
                         <p>And again, after clicking the button above, you’ll be getting push message updates daily. If you prefer to stop getting these push messages, click below to unsubcribe.</p>
                         <button class="btn--action" id="unsubscribe-push-2" disabled="disabled">Initiating...</button>
-                        <p>As a reminder, you can check out a fully working version of this demo on the <a href="https://github.com/MicrosoftEdge/pushnotifications-demo">GitHub repo</a>.</p>
+                        <p>As a reminder, you can check out a fully working version of this demo on the <a href="https://github.com/mark-szabo/pushnotifications-demo-aspnetcore">GitHub repo</a>.</p>
                     </div>
                 </div>
             </div>
@@ -329,9 +326,9 @@ function urlBase64ToUint8Array(base64String) {
         <div class="l-contain">
             <div class="c-outro__byline">
                 <p><a href="https://developer.microsoft.com/en-us/microsoft-edge/testdrive/" class="c-nav-bar__more">A demo</a> by Microsoft Edge</p>
-                <p>Contributors: <a href="https://github.com/aliams">Ali Alabbas</a>, <a href="https://github.com/ststimac">Stephanie Drescher</a>, <a href="https://github.com/molant">Antón Molleda</a></p>
+                <p>Contributors: <a href="https://github.com/aliams">Ali Alabbas</a>, <a href="https://github.com/ststimac">Stephanie Drescher</a>, <a href="https://github.com/molant">Antón Molleda</a> and  <a href="https://github.com/mark-szabo">Mark Szabo</a></p>
             </div>
-            <a href="https://github.com/MicrosoftEdge/pushnotifications-demo" class="c-outro__github" aria-label="Explore code on Github">
+            <a href="https://github.com/mark-szabo/pushnotifications-demo-aspnetcore" class="c-outro__github" aria-label="Explore code on Github">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path fill-rule="evenodd" clip-rule="evenodd" fill="#FFF" d="M10 .2C4.5.2 0 4.7 0 10.2c0 4.4 2.9 8.2 6.8 9.5.5.1.7-.2.7-.5v-1.7c-2.8.6-3.4-1.3-3.4-1.3-.4-1.1-1.1-1.5-1.1-1.5-.9-.6.1-.6.1-.6 1 .1 1.5 1 1.5 1 .9 1.6 2.4 1.2 2.9.9.1-.6.3-1.1.6-1.3-2.1-.3-4.5-1.1-4.5-5 0-1.1.4-2 1-2.7-.1-.2-.4-1.2.1-2.6 0 0 .8-.3 2.7 1 .9-.2 1.8-.3 2.6-.3s1.7.1 2.5.3c1.9-1.3 2.7-1 2.7-1 .5 1.4.2 2.4.1 2.6.6.7 1 1.6 1 2.7 0 3.8-2.3 4.7-4.6 4.9.4.3.7.9.7 1.9v2.7c0 .3.2.6.7.5 4-1.3 6.8-5.1 6.8-9.5.1-5.5-4.4-10-9.9-10z" /></svg><span>Explore code</span>
             </a>
         </div>
