Update README with ASP.NET Core specific information

--- a/PushnotificationsDemo/Views/Home/Index.cshtml
+++ b/PushnotificationsDemo/Views/Home/Index.cshtml
@@ -154,7 +154,7 @@
 <pre><code>using WebPush;
 var vapidKeys = VapidHelper.GenerateVapidKeys();
 </code></pre>
-                        <p>Once they’re generated, you can use them for as long as you need to by setting the vapidKeys variable to what you just got when calling <code>generateVAPIDKeys()</code>:</p>
+                        <p>Once they’re generated, you can use them for as long as you need to by setting the vapidKeys variable to what you just got when calling <code>GenerateVapidKeys()</code>:</p>
 <pre><code>var vapidSubject = "mailto:myaccount@outlook.com";
 var vapidPublicKey = "BL6As_YCGHPf3ZeDbklyVxgvJVb4Tr5qjZFS-J7XzkT5zQNghd9iUBUsqSlVO5znwTsZZrEOx8JFRDJc1JmkymA";
 var vapidPrivateKey = "GnMVDgbtZrqs7tgKEkJaV5aZF8cVjoq7Ncz_TEVI_lo";
